# mog-protocol

./: .gitignore  .mcp.json  CLAUDE.md  Procfile  README.md  onboard.py  pyproject.toml  railway.toml  vercel.json
.claude/commands/: buy-from-mog.md  nevermined-buy.md  scout-api.md  wrap-api.md
.loop/: config.sh
.loop-backoffice/: config.sh  daemon-wrapper.sh
.loop-backoffice/briefs/: backoffice-001-initial-scout.md  backoffice-002-wrap-open-meteo.md  backoffice-005-wrap-mymemory-translation.md  backoffice-006-wrap-currency-conversion.md  backoffice-007-wrap-rest-countries.md  (+1 more)
.loop/agents/: coder.md  (+3 more)
data/: buy_pass_3.jsonl  buy_pass_3_notes.md  investment_analysis.json  marketplace_scan.json  marketplace_scan_2.json  marketplace_tracker.md  sweep_results.json
docs/: README.md  buy-from-mog.md  buy-troubleshooting.md  concept.md  hackathon-diary.md  initial-prompt.md  plan-ids.md  questions-for-nevermined.md
lib/: actions.py  assess.py  daemon.sh
skills/: README.md
src/: ads.py  catalog.py  client.py  gateway.py  helicone.py  portfolio.py  pricing.py  pump.py  scan_marketplace.py  server.py  services.py  setup_agent.py  setup_buyer.py  setup_debugger_agent.py  setup_gateway.py  setup_hackathon_guide.py  setup_paid_plans.py  supervisor.py  sweep_buy.py  telemetry.py  test_e2e.py  test_gateway.py  test_live.py  test_portfolio.py  test_pricing.py  test_toolkit.py  toolkit.py  traces.py  txlog.py
trinity/: dashboard-claude.md  design-book.md  scout-claude.md  worker-claude.md
web/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
(+146 files in other folders)
